<resources>
    <string name="app_name">M-Hike</string>

    <string name="closewindow">Close Window</string>
    <string name="email_password_error">Incorrect email or password</string>
    <string name="password">Password</string>
    <string name="e_mail_address">E-mail</string>
    <string name="log_in">Log in</string>
    <string name="fb_logo">fb logo</string>
    <string name="google_logo">google logo</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">or</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don’t have an account?\u0020</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?\u0020</string>
    <string name="login_here">Login here</string>
    <string name="full_name">Full Name</string>
    <string name="agreement">By signing up, you agree to the Terms and conditions of M-Hike</string>
    <string name="reset_password">Reset password</string>
    <string name="a_reset_password_link_will_be_sent_to_your_email_address_follow_to_create_a_new_password">A reset password link will be sent to your email address. Follow to create a new password.</string>
    <string name="send">Send</string>
    <string name="full_name_is_required">Full name is required</string>
    <string name="email_address_is_reqiured">Email address is required</string>
    <string name="enter_valid_email">Enter a valid email address</string>
    <string name="creat_password">Please create a password</string>
    <string name="password_lenght">Password should be at least 8 character long</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_email">Enter email address</string>
    <string name="invalid_email_or_password">Invalid email or password</string>

    <string name="signin_successful">Sign in successful</string>

    <string name="back">back</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="signup_failed">Sign up failed</string>
    <string name="web_client_id">28423641706-k2let461sr26a1bn9dmahrhfusv0b3nc.apps.googleusercontent.com</string>
    <string name="fab_content_desc">Add Hike</string>
    <string name="add_hike">Add Hike</string>
    <string name="hike_name">Hike name</string>
    <string name="hike_location">Location</string>
    <string name="numb_of_persons">No. of Persons</string>
    <string name="hike_date">Date</string>
    <string name="distance">Distance</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="difficulty_level1">Difficulty level:\u0020</string>
    <string name="hike_purpose">Purpose of hike</string>
    <string name="km">\u0020km</string>
    <string name="description">Description</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="camping">Are you camping?</string>
    <string name="camping1">Camping:\u0020</string>
    <string name="parking">Parking Aval:\u0020</string>
    <string name="required">Required</string>
    <string name="parking_aval">Parking Available</string>
    <string name="parking_availability">Please select parking availability</string>
    <string name="submit">Submit</string>
    <string name="new_hike">New Hike</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="yes_caps">YES</string>
    <string name="hike_not_created">Hike not created, please try again</string>
    <string name="search_hike_name">Search hike name</string>
    <string name="no_hike_created">No Hike created</string>
    <string name="hike_created_successfully">Hike created Successfully</string>
    <string name="confirm_details">Confirm details</string>
    <string name="separator">\u0020 | \u0020</string>
    <string name="hike_distance">Distance</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="favourite1">to favourite</string>
    <string name="favourite2">from favourite</string>
    <string name="observation">Observation</string>
    <string name="add_observation">Add</string>
    <string name="add_observation2">Add Observation</string>
    <string name="delete_all_observation">Delete all</string>
    <string name="additional_comment">Additional comment</string>
    <string name="cancel">Cancel</string>
    <string name="click_icon">Click icon to add image</string>
    <string name="camera_icon">Camera icon</string>
    <string name="observation_not_created">Observation not added, please try again</string>
    <string name="observation_added">Observation added</string>
    <string name="delete_unsuccessful">Unsuccessful, please try again.</string>
    <string name="hike_deleted">Hike Deleted</string>
    <string name="hike">Hike</string>
    <string name="hike_not_updated">Update failed, please try agian</string>
    <string name="hike_update_successfully">Success</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <string name="account">Account</string>
    <string name="no_hike_here">No hikes here</string>
    <string name="add">Add\u0020</string>
    <string name="remove_hike_from_favourite">Remove\u0020</string>
    <string name="add_hike_message">Hike will be added to favourite</string>
    <string name="remove_hike_message">Hike will be deleted to favourite</string>
    <string name="delete">Delete </string>
    <string name="delete_all_hikes">Delete all hikes</string>
    <string name="diff_level">Difficulty level:</string>
    <string name="delete_hike_message">Are you sure you want to delete\u0020</string>
    <string name="sign_up_successful">Sign up successful</string>
    <string name="delete_all_message">Are you sure you want to delete all hikes?</string>
    <string name="user_id">vw3877a</string>
    <string name="upload">Upload</string>

    <string-array name="purpose_of_hike">
        <item>Charity</item>
        <item>Corporate</item>
        <item>Personal</item>
        <item>Other</item>
    </string-array>
</resources>