<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.DetailsConfirmation">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/obj_56"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:elevation="@dimen/obj_5"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/loginLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/obj_36"
            android:text="@string/new_hike"
            android:textSize="@dimen/textSize_24"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroymedium"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/editLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/obj_18"
            android:padding="@dimen/obj_8"
            android:text="@string/edit"
            android:textSize="@dimen/textSize_24"
            android:textColor="@color/teal_200"
            android:fontFamily="@font/gilroysemibold"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:visibility="visible" />
    </RelativeLayout>

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/obj_24"
        android:layout_marginTop="@dimen/obj_15"
        android:fontFamily="@font/gilroymedium"
        android:text="@string/confirm_details"
        android:textAlignment="center"
        android:textColor="@color/greyishBrown"
        android:textSize="@dimen/textSize_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hikeNameOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label"
        android:layout_marginTop="@dimen/obj_20"
        android:layout_marginStart="@dimen/obj_24"
        android:layout_marginEnd="@dimen/obj_24"
        android:hint="@string/hike_name"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hikeName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/blackText"
            android:textSize="@dimen/textSize_20"
            android:enabled="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locationOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/hikeNameOutline"
        android:layout_marginTop="@dimen/obj_20"
        android:layout_marginStart="@dimen/obj_24"
        android:layout_marginEnd="@dimen/obj_24"
        android:hint="@string/hike_location"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/textSize_20"
            android:textColor="@color/blackText"
            android:enabled="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/group_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/obj_24"
        android:layout_marginTop="@dimen/obj_10"
        android:layout_marginEnd="@dimen/obj_24"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/locationOutline">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateOutline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/obj_5"
            android:layout_weight="1"
            android:hint="@string/hike_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroymedium"
                android:textColor="@color/blackText"
                android:textSize="@dimen/textSize_20"
                android:enabled="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/distanceOutline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/obj_5"
            android:layout_weight="1"
            android:hint="@string/distance"
            app:suffixText="@string/km">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroymedium"
                android:inputType="number"
                android:textColor="@color/blackText"
                android:textSize="@dimen/textSize_20"
                android:enabled="false"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hikePurposeOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/group_view"
        android:layout_marginTop="@dimen/obj_20"
        android:layout_marginStart="@dimen/obj_24"
        android:layout_marginEnd="@dimen/obj_24"
        android:hint="@string/hike_purpose"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hikePurpose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/textSize_20"
            android:textColor="@color/blackText"
            android:enabled="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/obj_24"
        android:layout_marginTop="@dimen/obj_10"
        android:layout_marginEnd="@dimen/obj_24"
        android:hint="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hikePurposeOutline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:fontFamily="@font/gilroymedium"
            android:inputType="none"
            android:maxHeight="50dp"
            android:maxLength="100"
            android:maxLines="5"
            android:textColor="@color/blackText"
            android:textSize="@dimen/textSize_20"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numbOfPersonsOutline"
        android:layout_width="@dimen/obj_150"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/obj_24"
        android:layout_marginTop="@dimen/obj_10"
        android:layout_marginEnd="@dimen/obj_24"
        android:layout_weight="1"
        android:hint="@string/numb_of_persons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionOutline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numbOfPersons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroymedium"
            android:inputType="number"
            android:textColor="@color/blackText"
            android:textSize="@dimen/textSize_17"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/campingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/obj_24"
        android:layout_marginTop="@dimen/obj_15"
        android:fontFamily="@font/gilroymedium"
        android:text="@string/camping"
        android:textAlignment="center"
        android:textColor="@color/greyishBrown"
        android:textSize="@dimen/textSize_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbOfPersonsOutline" />

    <TextView
        android:id="@+id/camping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/obj_24"
        android:layout_marginTop="@dimen/obj_15"
        android:fontFamily="@font/gilroymedium"
        android:text="@string/yes"
        android:textAlignment="center"
        android:textColor="@color/greyishBrown"
        android:textSize="@dimen/textSize_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campingLabel"/>

    <TextView
        android:id="@+id/parkingAvalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/obj_24"
        android:layout_marginTop="@dimen/obj_15"
        android:fontFamily="@font/gilroymedium"
        android:text="@string/parking_aval"
        android:textAlignment="center"
        android:textColor="@color/greyishBrown"
        android:textSize="@dimen/textSize_20"
        app:layout_constraintBottom_toBottomOf="@+id/campingLabel"
        app:layout_constraintStart_toEndOf="@+id/campingLabel" />

    <TextView
        android:id="@+id/parking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/obj_15"
        android:fontFamily="@font/gilroymedium"
        android:text="@string/yes"
        android:textAlignment="center"
        android:textColor="@color/greyishBrown"
        android:textSize="@dimen/textSize_20"
        app:layout_constraintStart_toStartOf="@+id/parkingAvalLabel"
        app:layout_constraintTop_toBottomOf="@+id/parkingAvalLabel"/>

    <Button
        android:id="@+id/submitBtn"
        style="@android:style/Widget.Material.Button"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/orange_background"
        android:elevation="2dp"
        android:fontFamily="@font/gilroysemibold"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/whiteTextColor"
        android:textSize="@dimen/textSize_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parking" />
</androidx.constraintlayout.widget.ConstraintLayout>