<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Signup"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/close"
            android:layout_width="@dimen/obj_24"
            android:layout_height="@dimen/obj_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/obj_30"
            android:layout_marginTop="26dp"
            android:src="@drawable/ic_back_black"
            android:contentDescription="@string/back"
            />

        <TextView
            android:id="@+id/signup_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/close"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/obj_36"
            android:layout_marginStart="@dimen/obj_30"
            android:text="@string/sign_up"
            android:textSize="@dimen/headerTextSize"
            android:textColor="@color/blackText"
            android:fontFamily="@font/gilroymedium"
            />

        <RelativeLayout
            style="@android:style/Widget.Material.Button"
            android:id="@+id/fb_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toBottomOf="@+id/signup_Label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/obj_39"
            android:layout_marginStart="@dimen/obj_24"
            android:layout_marginEnd="@dimen/obj_24"
            android:background="@drawable/socialmedia_signup_background"
            android:gravity="center|center_vertical"
            >

            <ImageView
                android:id="@+id/fb_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_fb"
                android:contentDescription="@string/fb_logo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/fb_logo"
                android:layout_marginStart="@dimen/obj_18"
                android:text="@string/continue_with_facebook"
                android:textSize="@dimen/textSize_20"
                android:textColor="@color/white"
                android:fontFamily="@font/gilroysemibold"
                />
        </RelativeLayout>

        <RelativeLayout
            style="@android:style/Widget.Material.Button"
            android:id="@+id/google_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toBottomOf="@+id/fb_btn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/obj_10"
            android:layout_marginStart="@dimen/obj_24"
            android:layout_marginEnd="@dimen/obj_24"
            android:background="@drawable/default_border"
            android:gravity="center|center_vertical"
            >


            <ImageView
                android:id="@+id/google_logo"
                android:layout_width="@dimen/obj_24"
                android:layout_height="@dimen/obj_24"
                android:background="@drawable/ic_google_ogo"
                android:contentDescription="@string/google_logo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/google_logo"
                android:layout_marginStart="18dp"
                android:text="@string/continue_with_google"
                android:textSize="@dimen/textSize_20"
                android:textColor="@color/google_btn"
                android:fontFamily="@font/gilroysemibold"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/obj_46"
            android:layout_height="@dimen/obj_26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/google_btn"
            android:layout_marginTop="@dimen/textSize_16"
            android:background="@drawable/white_background"
            android:gravity="center"
            android:elevation="0.1dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="@dimen/textSize_18"
                android:fontFamily="@font/gilroysemibold"
                android:textAlignment="center"
                />
        </RelativeLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/obj_26"
            app:layout_constraintTop_toBottomOf="@+id/google_btn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/textSize_16"
            android:layout_marginStart="@dimen/obj_24"
            android:layout_marginEnd="@dimen/obj_24"
            android:background="@drawable/line"
            android:layout_centerVertical="true"
            />

        <Button
            android:id="@+id/signUpEmailBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/obj_54"
            app:layout_constraintTop_toBottomOf="@+id/line"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/textSize_20"
            android:layout_marginStart="@dimen/obj_24"
            android:layout_marginEnd="@dimen/obj_24"
            android:text="@string/sign_up_with_email"
            android:textSize="@dimen/textSize_20"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/orange_background"
            android:fontFamily="@font/gilroysemibold"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/signUpEmailBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/obj_27">

            <TextView
                android:id="@+id/signinLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/obj_24"
                android:text="@string/already_have_an_account"
                android:textSize="@dimen/textSize_16"
                android:textColor="@color/greyishBrown"
                android:fontFamily="@font/gilroyregular"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/signupToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/signinLabel"
                android:text="@string/login_here"
                android:textSize="@dimen/textSize_16"
                android:textColor="@color/orange"
                android:fontFamily="@font/gilroysemibold"
                android:textAlignment="center"
                android:letterSpacing="0.1"
                />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/progressContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/frame_background"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/obj_75"
            android:layout_height="@dimen/obj_75"
            android:layout_gravity="center"/>
    </FrameLayout>
</FrameLayout>