<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.PasswordReset">


    <RelativeLayout
        android:id="@+id/progressContainer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="5dp"
        android:gravity="center"
        android:visibility="gone"
        >
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="75dp"
            android:layout_height="75dp" />
    </RelativeLayout>


    <ImageView
        android:id="@+id/close"
        android:layout_width="14dp"
        android:layout_height="14dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="29dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/ic_close"
        android:contentDescription="@string/closewindow"
        />

    <TextView
        android:id="@+id/addMobileNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="71dp"
        android:layout_marginStart="24dp"
        android:text="@string/reset_password"
        android:textSize="24sp"
        android:textColor="@color/greyishBrown"
        android:fontFamily="@font/gilroysemibold"
        />

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/addMobileNumberLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="13dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/a_reset_password_link_will_be_sent_to_your_email_address_follow_to_create_a_new_password"
        android:textSize="15sp"
        android:textColor="@color/greyishBrown"
        android:fontFamily="@font/gilroyregular"
        />

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/email_password_error"
        android:textSize="14sp"
        android:textColor="@color/errorColor"
        android:fontFamily="@font/gilroymedium"
        android:letterSpacing="0.1"
        android:visibility="gone"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label"
        android:hint="@string/e_mail_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroymedium"
            android:inputType="textEmailAddress"
            android:textColor="@color/blackText"
            android:textSize="17sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintTop_toBottomOf="@+id/emailOutline"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/send"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/whiteTextColor"
        android:background="@drawable/positive_button_background"
        android:fontFamily="@font/gilroysemibold"
        android:elevation="1dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>